Feature/allow post method for index routes (#192)
* Added route aliases

* Added alias route for audits in API docs

* Updated API docs for all new index routes
