# resources/views/docs/core/openapi.blade.yaml
@@ -14,16 +14,22 @@ servers:
 paths:
   /audits:
     $ref: /docs/core/paths/audits.yaml#/root
+  /audits/index:
+    $ref: /docs/core/paths/audits.yaml#/index
   /audits/{audit}:
     $ref: /docs/core/paths/audits.yaml#/nested
 
   /collections/categories:
     $ref: /docs/core/paths/category-collections.yaml#/root
+  /collections/categories/index:
+    $ref: /docs/core/paths/category-collections.yaml#/index
   /collections/categories/{category}:
     $ref: /docs/core/paths/category-collections.yaml#/nested
 
   /collections/personas:
     $ref: /docs/core/paths/persona-collections.yaml#/root
+  /collections/personas/index:
+    $ref: /docs/core/paths/persona-collections.yaml#/index
   /collections/personas/{persona}:
     $ref: /docs/core/paths/persona-collections.yaml#/nested
   /collections/personas/{persona}/image.png:
@@ -31,16 +37,22 @@ paths:
 
   /locations:
     $ref: /docs/core/paths/locations.yaml#/root
+  /locations/index:
+    $ref: /docs/core/paths/locations.yaml#/index
   /locations/{location}:
     $ref: /docs/core/paths/locations.yaml#/nested
 
   /notifications:
     $ref: /docs/core/paths/notifications.yaml#/root
+  /notifications/index:
+    $ref: /docs/core/paths/notifications.yaml#/index
   /notifications/{notification}:
     $ref: /docs/core/paths/notifications.yaml#/nested
 
   /organisations:
     $ref: /docs/core/paths/organisations.yaml#/root
+  /organisations/index:
+    $ref: /docs/core/paths/organisations.yaml#/index
   /organisations/{organisation}:
     $ref: /docs/core/paths/organisations.yaml#/nested
   /organisations/{organisation}/logo.png:
@@ -48,21 +60,29 @@ paths:
 
   /page-feedbacks:
     $ref: /docs/core/paths/page-feedbacks.yaml#/root
+  /page-feedbacks/index:
+    $ref: /docs/core/paths/page-feedbacks.yaml#/index
   /page-feedbacks/{page_feedback}:
     $ref: /docs/core/paths/page-feedbacks.yaml#/nested
 
   /referrals:
     $ref: /docs/core/paths/referrals.yaml#/root
+  /referrals/index:
+    $ref: /docs/core/paths/referrals.yaml#/index
   /referrals/{referral}:
     $ref: /docs/core/paths/referrals.yaml#/nested
 
   /report-schedules:
     $ref: /docs/core/paths/report-schedules.yaml#/root
+  /report-schedules/index:
+    $ref: /docs/core/paths/report-schedules.yaml#/index
   /report-schedules/{report_schedule}:
     $ref: /docs/core/paths/report-schedules.yaml#/nested
 
   /reports:
     $ref: /docs/core/paths/reports.yaml#/root
+  /reports/index:
+    $ref: /docs/core/paths/reports.yaml#/index
   /reports/{report}:
     $ref: /docs/core/paths/reports.yaml#/nested
   /reports/{report}/download:
@@ -73,11 +93,15 @@ paths:
 
   /service-locations:
     $ref: /docs/core/paths/service-locations.yaml#/root
+  /service-locations/index:
+    $ref: /docs/core/paths/service-locations.yaml#/index
   /service-locations/{service_location}:
     $ref: /docs/core/paths/service-locations.yaml#/nested
 
   /services:
     $ref: /docs/core/paths/services.yaml#/root
+  /services/index:
+    $ref: /docs/core/paths/services.yaml#/index
   /services/{service}:
     $ref: /docs/core/paths/services.yaml#/nested
   /services/{service}/logo.png:
@@ -85,17 +109,23 @@ paths:
 
   /status-updates:
     $ref: /docs/core/paths/status-updates.yaml#/root
+  /status-updates/index:
+    $ref: /docs/core/paths/status-updates.yaml#/index
 
   /stop-words:
     $ref: /docs/core/paths/stop-words.yaml#/root
 
   /taxonomies/categories:
     $ref: /docs/core/paths/category-taxonomies.yaml#/root
+  /taxonomies/categories/index:
+    $ref: /docs/core/paths/category-taxonomies.yaml#/index
   /taxonomies/categories/{category}:
     $ref: /docs/core/paths/category-taxonomies.yaml#/nested
 
   /taxonomies/organisations:
     $ref: /docs/core/paths/organisation-taxonomies.yaml#/root
+  /taxonomies/organisations/index:
+    $ref: /docs/core/paths/organisation-taxonomies.yaml#/index
   /taxonomies/organisations/{organisation}:
     $ref: /docs/core/paths/organisation-taxonomies.yaml#/nested
 
@@ -104,6 +134,8 @@ paths:
 
   /update-requests:
     $ref: /docs/core/paths/update-requests.yaml#/root
+  /update-requests/index:
+    $ref: /docs/core/paths/update-requests.yaml#/index
   /update-requests/{update_request}:
     $ref: /docs/core/paths/update-requests.yaml#/nested
   /update-requests/{update_request}/approve:
@@ -111,6 +143,8 @@ paths:
 
   /users:
     $ref: /docs/core/paths/users.yaml#/root
+  /users/index:
+    $ref: /docs/core/paths/users.yaml#/index
   /users/{user}:
     $ref: /docs/core/paths/users.yaml#/nested
   /users/{user}/user:
